<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_text">تهران پایتخت ایران است</string>
    <string name="button_false">نادرست</string>
    <string name="button_true">درست</string>

    <string name="toast_correct">جواب شما صحیح می باشد</string>
    <string name="toast_incorrect">جواب شما غلط می باشد</string>

    <string name="question_australia">استرالیا بزرگ ترین قاره جهان است.</string>
    <string name="question_oceans">اقیانوس آرام بزرگ ترین اقیانوس جهان است.</string>
    <string name="question_mideast">همه کشورهای خاورمیانه عرب زبان هستند.</string>
    <string name="question_africa">مصر در قاره آفریقا قرار دارد.</string>
    <string name="question_americas">کشور آمریکا پرجمعیت ترین کشور دنیا است.</string>
    <string name="question_asia">قاره آسیا در نیم کره جنوبی جهان واقع شده است.</string>
    <string name="score">SCORE:</string>
    <string name="count"></string>
    <string name="reset">Reset</string>
    <string name="textview_warning">آیا برای تقلب اطمینان دارید؟</string>
    <string name="textview_answer">answer</string>
    <string name="button_show_answer">نمایش تقلب</string>
    <string name="button_cheat">تقلب</string>
    <string name="toast_judgment">تقلب کار خوبی نیست</string>
    <string name="button_setting">تنظیمات</string>
    <string name="textview_hide_or_show">فعال یا غیر فعال کردن دکمه ها:</string>
    <string name="radio_button_prev">قبلی</string>
    <string name="radio_button_next">بعدی</string>
    <string name="radio_button_first">اولین</string>
    <string name="radio_button_last">آخرین</string>
    <string name="textview_change_size">تغییر سایز سوالات:</string>
    <string name="textview_change_color">تغییر رنگ پیش زمینه:</string>
    <string name="radio_button_small">کوچک</string>
    <string name="radio_button_medium">متوسط</string>
    <string name="radio_button_large">بزرگ</string>
    <string name="backgrand_light_red">قرمز</string>
    <string name="backgrand_light_blue">آبی</string>
    <string name="backgrand_light_green">سبز</string>
    <string name="backgrand_white">سفید</string>
    <string name="button_save">ذخیره</string>
    <string name="button_discard">انصراف</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="edittext_username">Username</string>
    <string name="edittext_password">Password</string>
    <string name="button_log_in">Log in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_signup">Sign up</string>
    <string name="edittext_signup_username">Username</string>
    <string name="edittext_signup_password">Password</string>

    <string name="empty_edittext_password">The item password cannot be empty</string>
    <string name="empty_edittext_username">The item username cannot be empty</string>
    <string name="invalid_info">Your information is not valid</string>
    <string name="valid_info">You are LOG IN now</string>

</resources>