<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.fragment.CheatFragment"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/txtview_warning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/textview_warning"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/txtview_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:text="@string/textview_answer"
        android:textColor="#0BF615" />

    <Button
        android:id="@+id/btn_show_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/button_show_answer"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold" />


</LinearLayout>